# AI-Skillathon

./: .env.example  .gitignore  LICENSE  README.md  References.md  Skill.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/iceberg_checker/: __init__.py  cli.py  connection.py  reporter.py
src/iceberg_checker/checks/: __init__.py  base.py  metadata.py
tests/: conftest.py  test_cli.py  test_metadata_checks.py
